force-app/main/default/objects/Therapeutic_Area_Patient__c/Therapeutic_Area_Patient__c.object-meta.xml
<CustomObject>
    <label>Therapeutic Area Patient</label>
    <nameField>
        <displayFormat>TAP - {00000000}</displayFormat>
        <label>Therapeutic Area Patient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Therapeutic Area Patients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>