force-app/main/default/objects/Therapeutic_Area_Patient__c/fields/Condition_Of_Interest_Order__c.field-meta.xml
<CustomField>
    <fullName>Condition_Of_Interest_Order__c</fullName>
    <label>Condition Of Interest Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>