force-app/main/default/objects/Therapeutic_Area_Patient__c/fields/IsRelatedToStudy__c.field-meta.xml
<CustomField>
    <fullName>IsRelatedToStudy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRelatedToStudy</label>
    <type>Checkbox</type>
</CustomField>