force-app/main/default/objects/Therapeutic_Area_Patient__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <label>Participant</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Therapeutic Areas</relationshipLabel>
    <relationshipName>Therapeutic_Area_Patients</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>