force-app/main/default/objects/Therapeutic_Area_Patient__c/fields/Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Area__c</fullName>
    <label>Therapeutic Area</label>
    <referenceTo>Therapeutic_Area__c</referenceTo>
    <relationshipLabel>Therapeutic Area Patients</relationshipLabel>
    <relationshipName>Therapeutic_Area_Patients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>